Arbeiten aus Workshop 1
Die gemeinsamen Arbeiten aus WOrkshop 1 (Home + StanUP)

--- a/lhind-agilportal/src/app/components/home/home.component.html
+++ b/lhind-agilportal/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<div style="text-align: center">
+  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="standUpC">Daily Stand Up</a></button><br>
+  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="#"></a>Sprint Review</button><br>
+  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="#">Sprint Retrospektive</a></button><br>
+  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="pPoker">Planning Poker</a></button>
+</div>
