--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
@@ -1,3 +1,9 @@
-<p>
-  standup-config works!
-</p>
+<form>
+  <div style="text-align: center">
+    <label style="padding-right: 2%; font-size: 125%">Teinehmeranzahl</label>
+    <input class="input-lg" type="number">
+    <br>
+  
+    <a href="standUpT" ><i  class="fa fa-play custIcon"></i></a>
+  </div>
+</form>
