Revert "Merge branch 'dev' of https://github.com/Cryptoshot/lhind.agileportal into dev"
This reverts commit 3a3e50dbfa5d679efc943b840ac9378479d0da73, reversing
changes made to 205f57d2244bc0d64417413ae29f0c66dc7f667c.

--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
@@ -1,11 +1,10 @@
-<div id= teilnehmer>
-    <mat-chip-list>
-            <mat-chip>3</mat-chip>
-            <mat-chip>4</mat-chip>
-            <mat-chip color="primary" selected>5</mat-chip>
-            <mat-chip color="accent" selected>6</mat-chip>
-            <mat-chip>7</mat-chip>
-            <mat-chip>8</mat-chip>
-            <mat-chip>9</mat-chip>
-    </mat-chip-list>
-</div>
+<form>
+    <mat-form-field class="example-full-width">  
+        <mat-icon>home</mat-icon> 
+        <!-- <a href="standUpT" ><i  class="fa fa-play custIcon"></i></a> -->
+  <div style="text-align: center">   
+      <label style="padding-right: 2%; font-size: 100%">Teilnehmer</label>
+      <input class="input-lg" type="number">
+    </div>
+    </mat-form-field>
+  </form>
