--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
@@ -1,11 +1,1 @@
-<div id= teilnehmer>
-    <mat-chip-list>
-            <mat-chip>3</mat-chip>
-            <mat-chip>4</mat-chip>
-            <mat-chip color="primary" selected>5</mat-chip>
-            <mat-chip color="accent" selected>6</mat-chip>
-            <mat-chip>7</mat-chip>
-            <mat-chip>8</mat-chip>
-            <mat-chip>9</mat-chip>
-    </mat-chip-list>
-</div>
+<mat-slider></mat-slider>
