--- a/lhind-agilportal/src/app/app.component.css
+++ b/lhind-agilportal/src/app/app.component.css
@@ -1,5 +1,5 @@
 [header]{
-    padding-top: 5%;
+    padding-top: 12%;
     width: 100%;
     background-color: rgb(5, 22, 76);
 }
@@ -7,5 +7,7 @@
 [clr]{
     color: white;
     text-align: center;
-    padding-top: 5%;
+    padding-bottom: 8%;
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 200%;
 }
