--- a/lhind-agilportal/src/app/components/home/home.component.html
+++ b/lhind-agilportal/src/app/components/home/home.component.html
@@ -1,6 +1,24 @@
-<div style="text-align: center">
-  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="standUpC">Daily Stand Up</a></button><br>
-  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="#"></a>Sprint Review</button><br>
-  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="#">Sprint Retrospektive</a></button><br>
-  <button class="btn " mgrn><i class="fa fa-play custIcon"></i><a href="pPoker">Planning Poker</a></button>
+<div class="container-fluid">
+
+  <a href="standUpC">
+    <div class="container">
+      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Daily Stand Up</button>
+    </div>
+  </a>
+  <a href="#">
+    <div class="container">
+      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Sprint Review</button>
+    </div>
+  </a>
+  <a href="#">
+    <div class="container">
+      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Sprint Retrospektive</button>
+    </div>
+  </a>
+  <a href="pPoker">
+    <div class="container">
+      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Planning Poker</button>
+    </div>
+  </a>
+
 </div>
