--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.css
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.css
@@ -1,3 +1,10 @@
+h2 {
+  padding-top: 20%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 mat-slider {
-    width: 300px;
+    width: 310px;
+    margin-left: auto;
+    margin-right: auto;
   }
