--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
@@ -1,1 +1,18 @@
-<mat-slider></mat-slider>
+<!DOCTYPE html>
+<html>
+
+<head></head>
+
+<body>
+
+    <h2 align="center">Teilnehmeranzahl:</h2>
+
+    <mat-slider
+        tickInterval="1"
+        min="1"
+        max="18">
+    </mat-slider>
+
+</body>
+
+</html>
