--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.css
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.css
@@ -1,10 +1,15 @@
 h2 {
   padding-top: 20%;
+  padding-bottom: 10%;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 mat-slider {
-    width: 310px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 300px;
   }
+
+[custIcon]{
+    color: rgb(5, 22, 76);
+    padding-top: 25%;
+    font-size: 100px;
+}
