--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
@@ -7,11 +7,21 @@
 
     <h2 align="center">Teilnehmeranzahl:</h2>
 
-    <mat-slider
-        tickInterval="1"
-        min="1"
-        max="18">
-    </mat-slider>
+    <div align="center">
+        <mat-slider
+            thumbLabel
+            [displayWith]="formatLabel"
+            tickInterval="1"
+            min="1"
+            max="18">
+        </mat-slider>
+    </div>
+    
+    <a href="standUpT">
+        <div align="center">
+            <i class="fa fa-play" custIcon></i>
+        </div>
+    </a>
 
 </body>
 
