--- a/lhind-agilportal/src/app/components/home/home.component.html
+++ b/lhind-agilportal/src/app/components/home/home.component.html
@@ -1,24 +1,32 @@
-<div class="container-fluid">
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+      <div class="container-fluid">
 
-  <a href="standUpC">
-    <div class="container">
-      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Daily Stand Up</button>
-    </div>
-  </a>
-  <a href="#">
-    <div class="container">
-      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Sprint Review</button>
-    </div>
-  </a>
-  <a href="#">
-    <div class="container">
-      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Sprint Retrospektive</button>
-    </div>
-  </a>
-  <a href="pPoker">
-    <div class="container">
-      <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Planning Poker</button>
-    </div>
-  </a>
-
-</div>
+          <a href="standUpC">
+            <div class="container">
+              <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Daily Stand Up</button>
+            </div>
+          </a>
+          <a href="#">
+            <div class="container">
+              <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Sprint Review</button>
+            </div>
+          </a>
+          <a href="#">
+            <div class="container">
+              <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Sprint Retrospektive</button>
+            </div>
+          </a>
+          <a href="pPoker">
+            <div class="container">
+              <i class="fa fa-play" custIcon></i><button class="btn " mgrn>Planning Poker</button>
+            </div>
+          </a>
+        
+        </div>
+  </body>
+</html>
