--- a/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
+++ b/lhind-agilportal/src/app/components/standup-config/standup-config.component.html
@@ -4,16 +4,9 @@
 <head></head>
 
 <body>
-
     <h2 align="center">Teilnehmeranzahl:</h2>
-
     <div align="center">
-        <mat-slider 
-            thumbLabel
-            [displayWith]="formatLabel"
-            tickInterval="1"
-            min="1"
-            max="18">
+        <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="18">
         </mat-slider>
     </div>
 
