--- a/lhind-agilportal/src/app/components/standup-timer/standup-timer.component.html
+++ b/lhind-agilportal/src/app/components/standup-timer/standup-timer.component.html
@@ -1,3 +1,11 @@
-<mat-spinner>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+        <mat-spinner>
 
-</mat-spinner>
+        </mat-spinner>
+  </body>
+</html>
